hphp/test/zend/good/ext/xmlwriter/tests/OO_007.php.skipif
<?php 
if (!extension_loaded("xmlwriter")) die("skip"); 
if (LIBXML_VERSION < 20629) die("skip: libxml2 2.6.29+ required");
?>