hphp/test/zend/bad/ext/phar/tests/readfile_edgecases.php.skipif
<?php if (!extension_loaded("phar")) die("skip");?>
<?php if (version_compare(PHP_VERSION, "6.0", ">=")) die("skip requires php older than 6.0"); ?>